updated some changes

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "india-student-hub-backend",
+  "name": "genewa-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
