--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@supabase/supabase-js": "^2.39.5"
+    "@supabase/supabase-js": "^2.39.5",
+    "google-auth-library": "^9.15.0",
+    "googleapis": "^144.0.0",
+    "chrono-node": "^2.7.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
