--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -14,7 +14,7 @@ dist-ssr
 
 # Editor directories and files
 .vscode/*
-.backend/.google-tokens.json
+backend/.google-tokens.json
 !.vscode/extensions.json
 .idea
 .DS_Store
