--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,17 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@modelcontextprotocol/sdk": "^1.17.2",
+    "@supabase/supabase-js": "^2.39.5",
+    "axios": "^1.11.0",
+    "chrono-node": "^2.7.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@supabase/supabase-js": "^2.39.5",
+    "express": "^4.18.2",
     "google-auth-library": "^9.15.0",
-    "googleapis": "^144.0.0",
-    "chrono-node": "^2.7.6"
+    "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
-} 
+}
