--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,11 @@ SUPABASE_JWT_SECRET=your_supabase_jwt_secret
 GROQ_API_URL=https://api.groq.com/openai/v1/chat/completions
 GROQ_API_KEY=your_groq_api_key
 
+# OpenWeatherMap API Configuration (Optional - for real weather data)
+# Get your free API key from: https://openweathermap.org/api
+# Without this key, the app will use mock weather data
+OPENWEATHER_API_KEY=your_openweather_api_key_here
+
 # Google Calendar Configuration
 GOOGLE_OAUTH_CREDENTIALS=./calendar/google-calendar-mcp/gcp-oauth.keys.json
 
@@ -14,3 +19,8 @@ GOOGLE_OAUTH_CREDENTIALS=./calendar/google-calendar-mcp/gcp-oauth.keys.json
 PORT=4000
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
+
+# Notes:
+# - The weather module now supports IP-based location detection using ipapi.co (free, no API key required)
+# - Weather data can be fetched by coordinates (more accurate) or city name
+# - For production, ensure proper CORS configuration and use HTTPS
