--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.15.0",
-    "googleapis": "^144.0.0"
+    "googleapis": "^144.0.0",
+    "json": "^11.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "resend": "^6.0.1",
+    "token": "^0.1.0",
+    "web": "^0.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
